force-app/main/default/objects/Gong__Related_Contact__c/Gong__Related_Contact__c.object-meta.xml
<CustomObject>
    <label>Gong Related Contacts</label>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>