force-app/main/default/objects/Gong__Related_Contact__c/fields/Gong__Related_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Gong__Related_Entity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gong Conversations</relationshipLabel>
    <relationshipName>Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>