force-app/main/default/objects/Gong__Related_Contact__c/fields/Gong__Started__c.field-meta.xml
<CustomField>
    <fullName>Gong__Started__c</fullName>
    <formula>Gong__Gong_Interaction__r.Gong__Call_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Started</label>
    <type>Date</type>
</CustomField>